manifests/infrastructure/pocket-id/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  labels:
    app.kubernetes.io/instance: pocket-id
    app.kubernetes.io/name: pocket-id
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: pocket-id
    app.kubernetes.io/name: pocket-id
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
