manifests/infrastructure/pocket-id/resources/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`id.vrs-factory.dev`)
      kind: Rule
      services:
        - name: pocket-id
          port: 80
  tls:
    certResolver: letsencrypt
